--- a/src/Contracts/Masa.Dcc.Contracts.Admin/Masa.Dcc.Contracts.Admin.csproj
+++ b/src/Contracts/Masa.Dcc.Contracts.Admin/Masa.Dcc.Contracts.Admin.csproj
@@ -7,7 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Masa.Utils.Data.DataAnnotations" Version="0.6.0" />
+    <PackageReference Include="Masa.BuildingBlocks.StackSdks.Dcc.Contracts" Version="0.7.0-preview.4" />
+    <PackageReference Include="Masa.Utils.Data.DataAnnotations" Version="0.7.0-preview.4" />
   </ItemGroup>
 
 </Project>
