--- a/src/Services/Masa.Dcc.Service/Masa.Dcc.Service.Admin.csproj
+++ b/src/Services/Masa.Dcc.Service/Masa.Dcc.Service.Admin.csproj
@@ -18,32 +18,31 @@
 	
 	<ItemGroup>
 		<PackageReference Include="Mapster" Version="7.3.0" />
-		<PackageReference Include="Masa.BuildingBlocks.Dispatcher.Events" Version="0.6.0" />
-		<PackageReference Include="Masa.BuildingBlocks.StackSdks.Auth" Version="0.6.0" />
-		<PackageReference Include="Masa.BuildingBlocks.StackSdks.Dcc" Version="0.6.0" />
-		<PackageReference Include="Masa.Contrib.Authentication.Identity" Version="0.6.0" />
-		<PackageReference Include="Masa.Contrib.Caching.Distributed.StackExchangeRedis" Version="0.6.0" />
-		<PackageReference Include="Masa.Contrib.Caching.MultilevelCache" Version="0.6.0" />
-		<PackageReference Include="Masa.Contrib.Data.Contracts.EFCore" Version="0.6.0" />
-		<PackageReference Include="Masa.Contrib.Data.EFCore.SqlServer" Version="0.6.0" />
-		<PackageReference Include="Masa.Contrib.Dispatcher.Events" Version="0.6.0" />
-		<PackageReference Include="Masa.Contrib.Dispatcher.IntegrationEvents.EventLogs.EFCore" Version="0.6.0" />
+		<PackageReference Include="Masa.BuildingBlocks.Dispatcher.Events" Version="0.7.0-preview.4" />
+		<PackageReference Include="Masa.BuildingBlocks.StackSdks.Auth" Version="0.7.0-preview.4" />
+		<PackageReference Include="Masa.Contrib.Authentication.Identity" Version="0.7.0-preview.4" />
+		<PackageReference Include="Masa.Contrib.Caching.Distributed.StackExchangeRedis" Version="0.7.0-preview.4" />
+		<PackageReference Include="Masa.Contrib.Caching.MultilevelCache" Version="0.7.0-preview.4" />
+		<PackageReference Include="Masa.Contrib.Data.Contracts.EFCore" Version="0.7.0-preview.4" />
+		<PackageReference Include="Masa.Contrib.Data.EFCore.SqlServer" Version="0.7.0-preview.4" />
+		<PackageReference Include="Masa.Contrib.Dispatcher.Events" Version="0.7.0-preview.4" />
+		<PackageReference Include="Masa.Contrib.Dispatcher.IntegrationEvents.EventLogs.EFCore" Version="0.7.0-preview.4" />
 		<PackageReference Include="FluentValidation" Version="10.4.0" />
 		<PackageReference Include="FluentValidation.AspNetCore" Version="10.4.0" />
 		<PackageReference Include="Dapr.AspNetCore" Version="1.8.0" />
-		<PackageReference Include="Masa.BuildingBlocks.Ddd.Domain" Version="0.6.0" />
-		<PackageReference Include="Masa.Contrib.Ddd.Domain" Version="0.6.0" />
-		<PackageReference Include="Masa.Contrib.Ddd.Domain.Repository.EFCore" Version="0.6.0" />
+		<PackageReference Include="Masa.BuildingBlocks.Ddd.Domain" Version="0.7.0-preview.4" />
+		<PackageReference Include="Masa.Contrib.Ddd.Domain" Version="0.7.0-preview.4" />
+		<PackageReference Include="Masa.Contrib.Ddd.Domain.Repository.EFCore" Version="0.7.0-preview.4" />
 		<PackageReference Include="Masa.Contrib.ReadWriteSpliting.Cqrs" Version="0.6.0-preview.3" />
-		<PackageReference Include="Masa.Contrib.Service.MinimalAPIs" Version="0.6.0" />
-		<PackageReference Include="Masa.Contrib.StackSdks.Pm" Version="0.6.0" />
+		<PackageReference Include="Masa.Contrib.Service.MinimalAPIs" Version="0.7.0-preview.4" />
+		<PackageReference Include="Masa.Contrib.StackSdks.Pm" Version="0.7.0-preview.4" />
 		<PackageReference Include="Masa.Utils.Caller.HttpClient" Version="0.6.0-preview.2" />
 		<PackageReference Include="Masa.Utils.Development.Dapr.AspNetCore" Version="0.6.0" />
-		<PackageReference Include="Masa.Utils.Extensions.Expressions" Version="0.6.0" />
-		<PackageReference Include="Masa.Utils.Security.Cryptography" Version="0.6.0" />
+		<PackageReference Include="Masa.Utils.Extensions.Expressions" Version="0.7.0-preview.4" />
+		<PackageReference Include="Masa.Utils.Security.Cryptography" Version="0.7.0-preview.4" />
 		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.1" />
-		<PackageReference Include="Masa.Contrib.Data.UoW.EFCore" Version="0.6.0" />
-		<PackageReference Include="Masa.Contrib.Dispatcher.IntegrationEvents.Dapr" Version="0.6.0" />
+		<PackageReference Include="Masa.Contrib.Data.UoW.EFCore" Version="0.7.0-preview.4" />
+		<PackageReference Include="Masa.Contrib.Dispatcher.IntegrationEvents.Dapr" Version="0.7.0-preview.4" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="6.0.1" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.4" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.4">
