--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Server/appsettings.Development.json
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Server/appsettings.Development.json
@@ -7,7 +7,7 @@
     }
   },
   "ServiceBaseUrl": "http://localhost:6196",
-  "PmClientAddress": "https://pm-service-develop.masastack.com/",
+  "PmClientAddress": "https://pm-service-develop.masastack.com",
   "AuthServiceBaseAddress": "https://auth-service-develop.masastack.com/",
   "McServiceBaseAddress": "https://mc-service-develop.masastack.com",
   "DccOptions": {
