--- a/src/Services/Masa.Dcc.Service/appsettings.Develop-ydy.json
+++ b/src/Services/Masa.Dcc.Service/appsettings.Develop-ydy.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=10.175.171.201,32679;Database=dcc_dev;User Id=dcc_dev;Password=Hzss@123dcc_dev;"
+    "DefaultConnection": "Server=10.175.171.201,32679;Database=dcc_dev;User Id=ss;Password=Hzss@123;"
   },
   "RedisConfig": {
     "Servers": [
