--- a/src/Services/Masa.Dcc.Service/appsettings - 复制.Staging.json
+++ b/src/Services/Masa.Dcc.Service/appsettings - 复制.Staging.json
@@ -6,25 +6,25 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=10.175.171.201,32679;Database=dcc_staging;User Id=ss;Password=Hzss@123;"
+  },
   "Masa:Observable": {
     "OtlpUrl": "http://10.10.90.114:32147",
     "ServiceName": "masa.dcc.service",
     "ServiceVersion": "1.0.0",
     "ServiceNameSpace": "Staging"
   },
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=sqlserver-test-svc.stack,1433;Database=masa-dcc-v2;User Id=sa;Password=p@ssw0rd;"
-  },
   "RedisConfig": {
     "Servers": [
       {
-        "Host": "redis-test-svc.stack",
-        "Port": 6379
+        "Host": "10.175.207.202",
+        "Port": 30260
       }
     ],
-    "DefaultDatabase": 0,
-    "Password": "p@ssw0rd"
+    "DefaultDatabase": 1,
+    "Password": "Hzss@123redis"
   },
-  "PmClientAddress": "https://pm-service-staging.masastack.com/",
+  "PmClientAddress": "https://pm-service-staging.masastack.com",
   "IdentityServerUrl": "https://sso-staging.masastack.com"
 }
