--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Server/Masa.Dcc.Web.Admin.Server.csproj
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Server/Masa.Dcc.Web.Admin.Server.csproj
@@ -7,7 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Masa.Contrib.StackSdks.Tsc" Version="0.7.0-preview.22" />
+    <PackageReference Include="Masa.Contrib.StackSdks.Config" Version="0.7.0-preview.23" />
+    <PackageReference Include="Masa.Contrib.StackSdks.Tsc" Version="0.7.0-preview.23" />
   </ItemGroup>
 
   <ItemGroup>
