--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,7 +9,7 @@ stages:
   - deploy-test
   - docker-prd
   - deploy-staging
-#  - deploy-prd
+  - deploy-prd
 
 variables:
   NEW_ALI_REGISTRY: registry.cn-hangzhou.aliyuncs.com
@@ -19,8 +19,8 @@ variables:
   NEW_IMAGE_DCC_DEV: $NEW_ALI_REGISTRY/masastack/masa-dcc-service-admin:dev-$CI_PIPELINE_ID
   NEW_IMAGE_DCC_UI_DEV : $NEW_ALI_REGISTRY/masastack/masa-dcc-web-admin-server:dev-$CI_PIPELINE_ID
 
-  NEW_IMAGE_DCC: $NEW_ALI_REGISTRY/masastack/masa-dcc-service-admin:$CI_PIPELINE_ID
-  NEW_IMAGE_DCC_UI: $NEW_ALI_REGISTRY/masastack/masa-dcc-web-admin-server:$CI_PIPELINE_ID
+  NEW_IMAGE_DCC: $NEW_ALI_REGISTRY/masastack/masa-dcc-service-admin:$CI_COMMIT_TAG
+  NEW_IMAGE_DCC_UI: $NEW_ALI_REGISTRY/masastack/masa-dcc-web-admin-server:$CI_COMMIT_TAG
 
 docker-dev:
   stage: docker-dev
@@ -29,7 +29,7 @@ docker-dev:
   before_script:
     - docker login -u $CI_ALI_REGISTRY_USER -p $CI_ALI_REGISTRY_PASSWD $CI_ALI_REGISTRY_DOMAIN 
   only:
-    - develop
+    - main
   script:
     - docker build -f $DOCKER_DCC_PATH -t $NEW_IMAGE_DCC_DEV .
     - docker push $NEW_IMAGE_DCC_DEV 
@@ -43,7 +43,7 @@ deploy-dev:
   stage: deploy-dev
   image: registry.cn-hangzhou.aliyuncs.com/masa/library:helm3_latest
   only:
-    - develop
+    - main
   before_script:
     - helm repo add masastack https://masastack.github.io/helm/
     - helm repo update
@@ -58,7 +58,7 @@ deploy-test:
   stage: deploy-test
   image: registry.cn-hangzhou.aliyuncs.com/masa/library:helm3_latest
   only:
-    - develop
+    - main
   before_script:
     - helm repo add masastack https://masastack.github.io/helm/
     - helm repo update
@@ -69,23 +69,6 @@ deploy-test:
     - helm --kubeconfig ./config upgrade --install masastack masastack/masastack --version 1.0.0-rc2 -n masastack-test --set dcc.image.tag=dev-$CI_PIPELINE_ID -f ./values/values-test.yaml
   retry: 2
   when: manual
-
-docker-prd:
-  stage: docker-prd
-  tags:
-    - linux-shell
-  before_script:
-    - docker login -u $CI_ALI_REGISTRY_USER -p $CI_ALI_REGISTRY_PASSWD $CI_ALI_REGISTRY_DOMAIN 
-  only:
-    - main  
-  script:
-    - docker build -f $DOCKER_DCC_PATH -t $NEW_IMAGE_DCC .
-    - docker push $NEW_IMAGE_DCC 
-    - docker build -f $DOCKER_DCC_UI_PATH -t $NEW_IMAGE_DCC_UI .
-    - docker push $NEW_IMAGE_DCC_UI
-  after_script:
-    - docker rmi $NEW_IMAGE_DCC
-    - docker rmi $NEW_IMAGE_DCC_UI
 
 deploy-staging:
   stage: deploy-staging
@@ -99,21 +82,39 @@ deploy-staging:
   script:
     - echo $KUBE_CONFIG_MASA_YDY | base64 -d > ./config
     - echo $CI_PIPELINE_ID
-    - helm --kubeconfig ./config upgrade --install masastack masastack/masastack --version 1.0.0-rc2 -n masastack-staging --set dcc.image.tag=$CI_PIPELINE_ID -f ./values/values-staging.yaml
+    - helm --kubeconfig ./config upgrade --install masastack masastack/masastack --version 1.0.0-rc2 -n masastack-staging --set dcc.image.tag=dev-$CI_PIPELINE_ID -f ./values/values-staging.yaml
   retry: 2
+  when: manual
 
-# deploy-prd:
-#   stage: deploy-prd
-#   image: registry.cn-hangzhou.aliyuncs.com/masa/library:helm3_latest
-#   only:
-#     - main
-#   before_script:
-#     - helm repo add masastack https://masastack.github.io/helm/
-#     - helm repo update
-#     - helm search repo masastack --devel --versions
-#   script:
-#     - echo $KUBE_CONFIG_MASA_PRD | base64 -d > ./config
-#     - echo $CI_PIPELINE_ID
-#     - helm --kubeconfig ./config upgrade --install masastack masastack/masastack --version 1.0.0-rc2 -n masastack-prd --set dcc.image.tag=$CI_PIPELINE_ID -f ./values/values-prd.yaml
-#   retry: 2
-#   when: manual
+docker-prd:
+  stage: docker-prd
+  tags:
+    - linux-shell
+  before_script:
+    - docker login -u $CI_ALI_REGISTRY_USER -p $CI_ALI_REGISTRY_PASSWD $CI_ALI_REGISTRY_DOMAIN 
+  only:
+    - tags  
+  script:
+    - docker build -f $DOCKER_DCC_PATH -t $NEW_IMAGE_DCC .
+    - docker push $NEW_IMAGE_DCC 
+    - docker build -f $DOCKER_DCC_UI_PATH -t $NEW_IMAGE_DCC_UI .
+    - docker push $NEW_IMAGE_DCC_UI
+  after_script:
+    - docker rmi $NEW_IMAGE_DCC
+    - docker rmi $NEW_IMAGE_DCC_UI
+
+deploy-prd:
+  stage: deploy-prd
+  image: registry.cn-hangzhou.aliyuncs.com/masa/library:helm3_latest
+  only:
+    - tags
+  before_script:
+    - helm repo add masastack https://masastack.github.io/helm/
+    - helm repo update
+    - helm search repo masastack --devel --versions
+  script:
+    - echo $KUBE_CONFIG_MASA_PRD | base64 -d > ./config
+    - echo $CI_COMMIT_TAG
+    - helm --kubeconfig ./config upgrade --install masastack masastack/masastack --version 1.0.0-rc2 -n masastack-prd --set dcc.image.tag=$CI_COMMIT_TAG -f ./values/values-prd.yaml
+  retry: 2
+  when: manual
