--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,8 +1,3 @@
-# include:
-#   - project: 'louzhijian/devops'
-#     ref: master
-#     file: 'devops/sonar-scanner.yml'
-
 stages:
   - docker-dev
   - deploy-dev
@@ -12,15 +7,19 @@ stages:
   - deploy-prd
 
 variables:
-  NEW_ALI_REGISTRY: registry.cn-hangzhou.aliyuncs.com
   DOCKER_DCC_PATH: ./src/Services/Masa.Dcc.Service/Dockerfile
   DOCKER_DCC_UI_PATH: ./src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Server/Dockerfile
 
-  NEW_IMAGE_DCC_DEV: $NEW_ALI_REGISTRY/masastack/masa-dcc-service-admin:dev-$CI_PIPELINE_ID
-  NEW_IMAGE_DCC_UI_DEV : $NEW_ALI_REGISTRY/masastack/masa-dcc-web-admin-server:dev-$CI_PIPELINE_ID
+  NEW_IMAGE_DCC_DEV: $CI_ALI_REGISTRY_DOMAIN/masastack/masa-dcc-service-admin:dev-$CI_PIPELINE_ID
+  NEW_IMAGE_DCC_UI_DEV: $CI_ALI_REGISTRY_DOMAIN/masastack/masa-dcc-web-admin-server:dev-$CI_PIPELINE_ID
 
-  NEW_IMAGE_DCC: $NEW_ALI_REGISTRY/masastack/masa-dcc-service-admin:$CI_PIPELINE_ID
-  NEW_IMAGE_DCC_UI: $NEW_ALI_REGISTRY/masastack/masa-dcc-web-admin-server:$CI_PIPELINE_ID
+  NEW_IMAGE_DCC: $CI_ALI_REGISTRY_DOMAIN/masastack/masa-dcc-service-admin:$CI_PIPELINE_ID
+  NEW_IMAGE_DCC_UI: $CI_ALI_REGISTRY_DOMAIN/masastack/masa-dcc-web-admin-server:$CI_PIPELINE_ID
+
+  NAMESPACE_DEV: masastack-dev
+  NAMESPACE_TEST: masastack-test
+  NAMESPACE_STAGING: masastack-staging
+  NAMESPACE_PRD: masastack
 
 docker-dev:
   stage: docker-dev
@@ -41,48 +40,39 @@ docker-dev:
 
 deploy-dev:
   stage: deploy-dev
-  image: registry.cn-hangzhou.aliyuncs.com/masa/library:helm3_latest
+  image: registry.cn-hangzhou.aliyuncs.com/masa/library:kubectl-shell-v1.21.1
   only:
     - main
-  before_script:
-    - helm repo add masastack https://masastack.github.io/helm/
-    - helm repo update
-    - helm search repo masastack --devel --versions
   script:
     - echo $KUBE_CONFIG_MASA_YDY | base64 -d > ./config
     - echo $CI_PIPELINE_ID
-    - helm --kubeconfig ./config upgrade --install masastack masastack/masastack --version 1.0.0-rc2 -n masastack-dev --set dcc.image.tag=dev-$CI_PIPELINE_ID -f ./values/values-dev.yaml
+    - kubectl --kubeconfig ./config set image deployment/dcc dcc=$NEW_IMAGE_DCC_UI_DEV -n $NAMESPACE_DEV
+    - kubectl --kubeconfig ./config set image deployment/dcc-service dcc-service=$NEW_IMAGE_DCC_DEV -n $NAMESPACE_DEV
   retry: 2
 
 deploy-test:
   stage: deploy-test
-  image: registry.cn-hangzhou.aliyuncs.com/masa/library:helm3_latest
+  image: registry.cn-hangzhou.aliyuncs.com/masa/library:kubectl-shell-v1.21.1
   only:
     - main
-  before_script:
-    - helm repo add masastack https://masastack.github.io/helm/
-    - helm repo update
-    - helm search repo masastack --devel --versions
   script:
     - echo $KUBE_CONFIG_MASA_YDY | base64 -d > ./config
     - echo $CI_PIPELINE_ID
-    - helm --kubeconfig ./config upgrade --install masastack masastack/masastack --version 1.0.0-rc2 -n masastack-test --set dcc.image.tag=dev-$CI_PIPELINE_ID -f ./values/values-test.yaml
+    - kubectl --kubeconfig ./config set image deployment/dcc dcc=$NEW_IMAGE_DCC_UI_DEV -n $NAMESPACE_TEST
+    - kubectl --kubeconfig ./config set image deployment/dcc-service dcc-service=$NEW_IMAGE_DCC_DEV -n $NAMESPACE_TEST
   retry: 2
   when: manual
 
 deploy-staging:
   stage: deploy-staging
-  image: registry.cn-hangzhou.aliyuncs.com/masa/library:helm3_latest
+  image: registry.cn-hangzhou.aliyuncs.com/masa/library:kubectl-shell-v1.21.1
   only:
     - main
-  before_script:
-    - helm repo add masastack https://masastack.github.io/helm/
-    - helm repo update
-    - helm search repo masastack --devel --versions
   script:
     - echo $KUBE_CONFIG_MASA_YDY | base64 -d > ./config
     - echo $CI_PIPELINE_ID
-    - helm --kubeconfig ./config upgrade --install masastack masastack/masastack --version 1.0.0-rc2 -n masastack-staging --set dcc.image.tag=dev-$CI_PIPELINE_ID -f ./values/values-staging.yaml
+    - kubectl --kubeconfig ./config set image deployment/dcc dcc=$NEW_IMAGE_DCC_UI_DEV -n $NAMESPACE_STAGING
+    - kubectl --kubeconfig ./config set image deployment/dcc-service dcc-service=$NEW_IMAGE_DCC_DEV -n $NAMESPACE_STAGING
   retry: 2
   when: manual
 
@@ -90,31 +80,27 @@ docker-prd:
   stage: docker-prd
   tags:
     - linux-shell
-  before_script:
-    - docker login -u $CI_ALI_REGISTRY_USER -p $CI_ALI_REGISTRY_PASSWD $CI_ALI_REGISTRY_DOMAIN 
+  image: registry.cn-hangzhou.aliyuncs.com/masa/library:kubectl-shell-v1.21.1
   only:
-    - tags  
+    - tags
   script:
     - docker build -f $DOCKER_DCC_PATH -t $NEW_IMAGE_DCC .
     - docker push $NEW_IMAGE_DCC 
     - docker build -f $DOCKER_DCC_UI_PATH -t $NEW_IMAGE_DCC_UI .
     - docker push $NEW_IMAGE_DCC_UI
   after_script:
-    - docker rmi $NEW_IMAGE_DCC
+    - docker rmi $NEW_IMAGE_DCC   
     - docker rmi $NEW_IMAGE_DCC_UI
 
 deploy-prd:
   stage: deploy-prd
-  image: registry.cn-hangzhou.aliyuncs.com/masa/library:helm3_latest
+  image: registry.cn-hangzhou.aliyuncs.com/masa/library:kubectl-shell-v1.21.1
   only:
     - tags
-  before_script:
-    - helm repo add masastack https://masastack.github.io/helm/
-    - helm repo update
-    - helm search repo masastack --devel --versions
   script:
     - echo $KUBE_CONFIG_MASA_PRD | base64 -d > ./config
     - echo $CI_COMMIT_TAG
-    - helm --kubeconfig ./config upgrade --install masastack masastack/masastack --version 1.0.0-rc2 -n masastack --set dcc.image.tag=$CI_COMMIT_TAG -f ./values/values-prd.yaml
+    - kubectl --kubeconfig ./config set image deployment/dcc dcc=$NEW_IMAGE_DCC_UI -n $NAMESPACE_PRD
+    - kubectl --kubeconfig ./config set image deployment/dcc-service dcc-service=$NEW_IMAGE_DCC -n $NAMESPACE_PRD
   retry: 2
   when: manual
