--- a/.github/workflows/mirror-gitlab.yml
+++ b/.github/workflows/mirror-gitlab.yml
@@ -12,5 +12,5 @@ jobs:
           REMOTE: '${{ secrets.GITLAB_ADDER }}/cicd/masa.dcc.git'
           GIT_USERNAME: ${{ secrets.GIT_USERNAME }}
           GIT_PASSWORD: ${{ secrets.GIT_PASSWORD }}
-
+          PUSH_ALL_REFS: "false"
           
